# pyconometrics

./: .gitignore  LICENSE  README.md  pyproject.toml
pyconometrics/: __init__.py  data.py  ma.py  metric.py  model.py
pynometrics/: ma.py  metric.py  model.py
