[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyconometrics"
version = "0.0.7"
authors = [
  { name="wkflanders", email="wflanders@haverford.edu" },
]
description = "A small package for econometrics and finance."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=1.23.0',
    'pandas>=1.4.3',
    'pandas_datareader>=0.10.0',
]

[project.urls]
"Homepage" = "https://github.com/wkflanders/pynometrics"
"Bug Tracker" = "https://github.com/wkflanders/pynometrics/issues"